Update index.html, portfolio.html and styles

--- a/portfolio.html
+++ b/portfolio.html
@@ -86,15 +86,11 @@
                     width="360"
                     height="300"
                   />
-                  <div class="examples-cover-block">
-                    <p class="examples-cover-text">
-                      Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                      Veritatis alias obcaecati ullam, deserunt saepe ipsam
-                      necessitatibus reiciendis impedit, cumque veniam fuga.
-                      Quos porro nesciunt quasi perspiciatis cupiditate aperiam
-                      ea tempore
-                    </p>
-                  </div>
+                  <p class="examples-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="card">
                   <h2 class="examles-title">Banking App Interface Concept</h2>
@@ -112,13 +108,11 @@
                     width="360"
                     height="300"
                   />
-                  <div class="examples-cover-block">
-                    <p class="examples-cover-text">
-                      14 Stylish and User-Friendly App Design Concepts · Task
-                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                      App · Cloud Storage App
-                    </p>
-                  </div>
+                  <p class="examples-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="card">
                   <h2 class="examles-title">Cashless Payment</h2>
@@ -136,15 +130,11 @@
                     width="360"
                     height="300"
                   />
-                  <div class="examples-cover-block">
-                    <p class="examples-cover-text">
-                      Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                      Veritatis alias obcaecati ullam, deserunt saepe ipsam
-                      necessitatibus reiciendis impedit, cumque veniam fuga.
-                      Quos porro nesciunt quasi perspiciatis cupiditate aperiam
-                      ea tempore
-                    </p>
-                  </div>
+                  <p class="examples-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="card">
                   <h2 class="examles-title">Meditation App</h2>
@@ -162,15 +152,11 @@
                     width="360"
                     height="300"
                   />
-                  <div class="examples-cover-block">
-                    <p class="examples-cover-text">
-                      Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                      Veritatis alias obcaecati ullam, deserunt saepe ipsam
-                      necessitatibus reiciendis impedit, cumque veniam fuga.
-                      Quos porro nesciunt quasi perspiciatis cupiditate aperiam
-                      ea tempore
-                    </p>
-                  </div>
+                  <p class="examples-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="card">
                   <h2 class="examles-title">Taxi Service</h2>
@@ -188,15 +174,11 @@
                     width="360"
                     height="300"
                   />
-                  <div class="examples-cover-block">
-                    <p class="examples-cover-text">
-                      Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                      Veritatis alias obcaecati ullam, deserunt saepe ipsam
-                      necessitatibus reiciendis impedit, cumque veniam fuga.
-                      Quos porro nesciunt quasi perspiciatis cupiditate aperiam
-                      ea tempore
-                    </p>
-                  </div>
+                  <p class="examples-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="card">
                   <h2 class="examles-title">Screen Illustrations</h2>
@@ -214,15 +196,11 @@
                     width="360"
                     height="300"
                   />
-                  <div class="examples-cover-block">
-                    <p class="examples-cover-text">
-                      Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                      Veritatis alias obcaecati ullam, deserunt saepe ipsam
-                      necessitatibus reiciendis impedit, cumque veniam fuga.
-                      Quos porro nesciunt quasi perspiciatis cupiditate aperiam
-                      ea tempore
-                    </p>
-                  </div>
+                  <p class="examples-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="card">
                   <h2 class="examles-title">Online Courses</h2>
@@ -240,15 +218,11 @@
                     width="360"
                     height="300"
                   />
-                  <div class="examples-cover-block">
-                    <p class="examples-cover-text">
-                      Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                      Veritatis alias obcaecati ullam, deserunt saepe ipsam
-                      necessitatibus reiciendis impedit, cumque veniam fuga.
-                      Quos porro nesciunt quasi perspiciatis cupiditate aperiam
-                      ea tempore
-                    </p>
-                  </div>
+                  <p class="examples-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="card">
                   <h2 class="examles-title">Instagram Stories Concept</h2>
@@ -266,15 +240,11 @@
                     width="360"
                     height="300"
                   />
-                  <div class="examples-cover-block">
-                    <p class="examples-cover-text">
-                      Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                      Veritatis alias obcaecati ullam, deserunt saepe ipsam
-                      necessitatibus reiciendis impedit, cumque veniam fuga.
-                      Quos porro nesciunt quasi perspiciatis cupiditate aperiam
-                      ea tempore
-                    </p>
-                  </div>
+                  <p class="examples-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="card">
                   <h2 class="examles-title">Organic Food</h2>
@@ -292,15 +262,11 @@
                     width="360"
                     height="300"
                   />
-                  <div class="examples-cover-block">
-                    <p class="examples-cover-text">
-                      Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                      Veritatis alias obcaecati ullam, deserunt saepe ipsam
-                      necessitatibus reiciendis impedit, cumque veniam fuga.
-                      Quos porro nesciunt quasi perspiciatis cupiditate aperiam
-                      ea tempore
-                    </p>
-                  </div>
+                  <p class="examples-cover-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
                 </div>
                 <div class="card">
                   <h2 class="examles-title">Fresh Coffee</h2>
@@ -316,7 +282,7 @@
     <!-- footer -->
     <footer class="footer">
       <div class="container footer-container">
-        <div>
+        <div class="logo-container">
           <a class="link logo" href="./index.html"
             >Web<span class="logo-part-footer">Studio</span></a
           >
@@ -325,33 +291,53 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <div class="social-container">
+        <div>
           <p class="social">Social media</p>
           <ul class="list footer-networks">
             <li class="footer-item">
               <a class="footer-link" href="">
-                <svg class="icon-footer" aria-label="instagram">
+                <svg
+                  class="icon-footer"
+                  width="24"
+                  height="24"
+                  aria-label="instagram"
+                >
                   <use href="./images/symbol-defs.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-item">
               <a class="footer-link" href="">
-                <svg class="icon-footer" aria-label="twitter">
+                <svg
+                  class="icon-footer"
+                  width="24"
+                  height="24"
+                  aria-label="twitter"
+                >
                   <use href="./images/symbol-defs.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-item">
               <a class="footer-link" href="">
-                <svg class="icon-footer" aria-label="facebook">
+                <svg
+                  class="icon-footer"
+                  width="24"
+                  height="24"
+                  aria-label="facebook"
+                >
                   <use href="./images/symbol-defs.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-item">
               <a class="footer-link" href="">
-                <svg class="icon-footer" aria-label="linkedin">
+                <svg
+                  class="icon-footer"
+                  width="24"
+                  height="24"
+                  aria-label="linkedin"
+                >
                   <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                 </svg>
               </a>
