--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
     <!-- footer -->
     <footer class="footer">
       <div class="container footer-container">
-        <div>
+        <div class="logo-container">
           <a class="link logo" href="./index.html"
             >Web<span class="logo-part-footer">Studio</span></a
           >
@@ -426,33 +426,53 @@
             digital marketing & growth solutions.
           </p>
         </div>
-        <div class="social-container">
+        <div>
           <p class="social">Social media</p>
           <ul class="list footer-networks">
             <li class="footer-item">
               <a class="footer-link" href="">
-                <svg class="icon-footer" aria-label="instagram">
+                <svg
+                  class="icon-footer"
+                  width="24"
+                  height="24"
+                  aria-label="instagram"
+                >
                   <use href="./images/symbol-defs.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-item">
               <a class="footer-link" href="">
-                <svg class="icon-footer" aria-label="twitter">
+                <svg
+                  class="icon-footer"
+                  width="24"
+                  height="24"
+                  aria-label="twitter"
+                >
                   <use href="./images/symbol-defs.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-item">
               <a class="footer-link" href="">
-                <svg class="icon-footer" aria-label="facebook">
+                <svg
+                  class="icon-footer"
+                  width="24"
+                  height="24"
+                  aria-label="facebook"
+                >
                   <use href="./images/symbol-defs.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-item">
               <a class="footer-link" href="">
-                <svg class="icon-footer" aria-label="linkedin">
+                <svg
+                  class="icon-footer"
+                  width="24"
+                  height="24"
+                  aria-label="linkedin"
+                >
                   <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                 </svg>
               </a>
@@ -461,6 +481,7 @@
         </div>
       </div>
     </footer>
+
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="close-button" data-modal-close>
