--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="close-button" data-modal-close>
-          <svg class="closing-modal">
+          <svg class="closing-modal" width="8" height="8">
             <use href="./images/symbol-defs.svg#icon-closeblack"></use>
           </svg>
         </button>
