--- a/index.html
+++ b/index.html
@@ -367,44 +367,74 @@
         <div class="container">
           <h2 class="customers-title">Customers</h2>
           <ul class="customers-list list">
-            <li>
+            <li class="customers-item">
               <a class="customers-link" href="">
-                <svg class="customer-icon" aria-label="Customers logo">
+                <svg
+                  class="customer-icon"
+                  width="104"
+                  height="56"
+                  aria-label="Customers logo"
+                >
                   <use href="./images/symbol-defs.svg#icon-logo-1"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="customers-item">
               <a class="customers-link" href="">
-                <svg class="customer-icon" aria-label="Customers logo">
+                <svg
+                  class="customer-icon"
+                  width="104"
+                  height="56"
+                  aria-label="Customers logo"
+                >
                   <use href="./images/symbol-defs.svg#icon-logo-2"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="customers-item">
               <a class="customers-link" href="">
-                <svg class="customer-icon" aria-label="Customers logo">
+                <svg
+                  class="customer-icon"
+                  width="104"
+                  height="56"
+                  aria-label="Customers logo"
+                >
                   <use href="./images/symbol-defs.svg#icon-logo-3"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="customers-item">
               <a class="customers-link" href="">
-                <svg class="customer-icon" aria-label="Customers logo">
+                <svg
+                  class="customer-icon"
+                  width="104"
+                  height="56"
+                  aria-label="Customers logo"
+                >
                   <use href="./images/symbol-defs.svg#icon-logo-4"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="customers-item">
               <a class="customers-link" href="">
-                <svg class="customer-icon" aria-label="Customers logo">
+                <svg
+                  class="customer-icon"
+                  width="104"
+                  height="56"
+                  aria-label="Customers logo"
+                >
                   <use href="./images/symbol-defs.svg#icon-logo-5"></use>
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="customers-item">
               <a class="customers-link" href="">
-                <svg class="customer-icon" aria-label="Customers logo">
+                <svg
+                  class="customer-icon"
+                  width="104"
+                  height="56"
+                  aria-label="Customers logo"
+                >
                   <use href="./images/symbol-defs.svg#icon-logo-6"></use>
                 </svg>
               </a>
