Update index.html and styles

--- a/index.html
+++ b/index.html
@@ -75,7 +75,12 @@
           <ul class="list features-list">
             <li class="item">
               <div class="icon-features-list">
-                <svg class="icon-features" aria-label="antenna">
+                <svg
+                  class="icon-features"
+                  width="64"
+                  height="64"
+                  aria-label="antenna"
+                >
                   <use href="./images/symbol-defs.svg#icon-antenna"></use>
                 </svg>
               </div>
@@ -87,7 +92,12 @@
             </li>
             <li class="item">
               <div class="icon-features-list">
-                <svg class="icon-features" aria-label="clock">
+                <svg
+                  class="icon-features"
+                  width="64"
+                  height="64"
+                  aria-label="clock"
+                >
                   <use href="./images/symbol-defs.svg#icon-clock"></use>
                 </svg>
               </div>
@@ -99,7 +109,12 @@
             </li>
             <li class="item">
               <div class="icon-features-list">
-                <svg class="icon-features" aria-label="diagram">
+                <svg
+                  class="icon-features"
+                  width="64"
+                  height="64"
+                  aria-label="diagram"
+                >
                   <use href="./images/symbol-defs.svg#icon-diagram"></use>
                 </svg>
               </div>
@@ -111,7 +126,12 @@
             </li>
             <li class="item">
               <div class="icon-features-list">
-                <svg class="icon-features" aria-label="astronaut">
+                <svg
+                  class="icon-features"
+                  width="64"
+                  height="64"
+                  aria-label="astronaut"
+                >
                   <use href="./images/symbol-defs.svg#icon-astronaut"></use>
                 </svg>
               </div>
@@ -174,34 +194,54 @@
                 <h3 class="our-team-name">Mark Guerrero</h3>
                 <p class="our-team-work">Product Designer</p>
                 <ul class="list our-team-networks">
-                  <li>
+                  <li class="our-team-networks-item">
                     <a class="our-team-networks-link" href="">
-                      <svg class="icon-our-team" aria-label="instagram">
+                      <svg
+                        class="icon-our-team"
+                        width="16"
+                        height="16"
+                        aria-label="instagram"
+                      >
                         <use
                           href="./images/symbol-defs.svg#icon-instagram"
                         ></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="our-team-networks-item">
                     <a class="our-team-networks-link" href="">
-                      <svg class="icon-our-team" aria-label="twitter">
+                      <svg
+                        class="icon-our-team"
+                        width="16"
+                        height="16"
+                        aria-label="twitter"
+                      >
                         <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="our-team-networks-item">
                     <a class="our-team-networks-link" href="">
-                      <svg class="icon-our-team" aria-label="facebook">
+                      <svg
+                        class="icon-our-team"
+                        width="16"
+                        height="16"
+                        aria-label="facebook"
+                      >
                         <use
                           href="./images/symbol-defs.svg#icon-facebook"
                         ></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="our-team-networks-item">
                     <a class="our-team-networks-link" href="">
-                      <svg class="icon-our-team" aria-label="linkedin">
+                      <svg
+                        class="icon-our-team"
+                        width="16"
+                        height="16"
+                        aria-label="linkedin"
+                      >
                         <use
                           href="./images/symbol-defs.svg#icon-linkedin"
                         ></use>
@@ -223,34 +263,54 @@
                 <h3 class="our-team-name">Tom Ford</h3>
                 <p class="our-team-work">Frontend Developer</p>
                 <ul class="list our-team-networks">
-                  <li>
+                  <li class="our-team-networks-item">
                     <a class="our-team-networks-link" href="">
-                      <svg class="icon-our-team" aria-label="instagram">
+                      <svg
+                        class="icon-our-team"
+                        width="16"
+                        height="16"
+                        aria-label="instagram"
+                      >
                         <use
                           href="./images/symbol-defs.svg#icon-instagram"
                         ></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="our-team-networks-item">
                     <a class="our-team-networks-link" href="">
-                      <svg class="icon-our-team" aria-label="twitter">
+                      <svg
+                        class="icon-our-team"
+                        width="16"
+                        height="16"
+                        aria-label="twitter"
+                      >
                         <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="our-team-networks-item">
                     <a class="our-team-networks-link" href="">
-                      <svg class="icon-our-team" aria-label="facebook">
+                      <svg
+                        class="icon-our-team"
+                        width="16"
+                        height="16"
+                        aria-label="facebook"
+                      >
                         <use
                           href="./images/symbol-defs.svg#icon-facebook"
                         ></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="our-team-networks-item">
                     <a class="our-team-networks-link" href="">
-                      <svg class="icon-our-team" aria-label="linkedin">
+                      <svg
+                        class="icon-our-team"
+                        width="16"
+                        height="16"
+                        aria-label="linkedin"
+                      >
                         <use
                           href="./images/symbol-defs.svg#icon-linkedin"
                         ></use>
@@ -272,34 +332,54 @@
                 <h3 class="our-team-name">Camila Garcia</h3>
                 <p class="our-team-work">Marketing</p>
                 <ul class="list our-team-networks">
-                  <li>
+                  <li class="our-team-networks-item">
                     <a class="our-team-networks-link" href="">
-                      <svg class="icon-our-team" aria-label="instagram">
+                      <svg
+                        class="icon-our-team"
+                        width="16"
+                        height="16"
+                        aria-label="instagram"
+                      >
                         <use
                           href="./images/symbol-defs.svg#icon-instagram"
                         ></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="our-team-networks-item">
                     <a class="our-team-networks-link" href="">
-                      <svg class="icon-our-team" aria-label="twitter">
+                      <svg
+                        class="icon-our-team"
+                        width="16"
+                        height="16"
+                        aria-label="twitter"
+                      >
                         <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="our-team-networks-item">
                     <a class="our-team-networks-link" href="">
-                      <svg class="icon-our-team" aria-label="facebook">
+                      <svg
+                        class="icon-our-team"
+                        width="16"
+                        height="16"
+                        aria-label="facebook"
+                      >
                         <use
                           href="./images/symbol-defs.svg#icon-facebook"
                         ></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="our-team-networks-item">
                     <a class="our-team-networks-link" href="">
-                      <svg class="icon-our-team" aria-label="linkedin">
+                      <svg
+                        class="icon-our-team"
+                        width="16"
+                        height="16"
+                        aria-label="linkedin"
+                      >
                         <use
                           href="./images/symbol-defs.svg#icon-linkedin"
                         ></use>
@@ -321,34 +401,54 @@
                 <h3 class="our-team-name">Daniel Wilson</h3>
                 <p class="our-team-work">UI Designer</p>
                 <ul class="list our-team-networks">
-                  <li>
+                  <li class="our-team-networks-item">
                     <a class="our-team-networks-link" href="">
-                      <svg class="icon-our-team" aria-label="instagram">
+                      <svg
+                        class="icon-our-team"
+                        width="16"
+                        height="16"
+                        aria-label="instagram"
+                      >
                         <use
                           href="./images/symbol-defs.svg#icon-instagram"
                         ></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="our-team-networks-item">
                     <a class="our-team-networks-link" href="">
-                      <svg class="icon-our-team" aria-label="twitter">
+                      <svg
+                        class="icon-our-team"
+                        width="16"
+                        height="16"
+                        aria-label="twitter"
+                      >
                         <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="our-team-networks-item">
                     <a class="our-team-networks-link" href="">
-                      <svg class="icon-our-team" aria-label="facebook">
+                      <svg
+                        class="icon-our-team"
+                        width="16"
+                        height="16"
+                        aria-label="facebook"
+                      >
                         <use
                           href="./images/symbol-defs.svg#icon-facebook"
                         ></use>
                       </svg>
                     </a>
                   </li>
-                  <li>
+                  <li class="our-team-networks-item">
                     <a class="our-team-networks-link" href="">
-                      <svg class="icon-our-team" aria-label="linkedin">
+                      <svg
+                        class="icon-our-team"
+                        width="16"
+                        height="16"
+                        aria-label="linkedin"
+                      >
                         <use
                           href="./images/symbol-defs.svg#icon-linkedin"
                         ></use>
