Update index.html and portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -302,7 +302,7 @@
                   height="24"
                   aria-label="instagram"
                 >
-                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
@@ -314,7 +314,7 @@
                   height="24"
                   aria-label="twitter"
                 >
-                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
@@ -326,7 +326,7 @@
                   height="24"
                   aria-label="facebook"
                 >
-                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
@@ -338,7 +338,7 @@
                   height="24"
                   aria-label="linkedin"
                 >
-                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
