--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                   height="64"
                   aria-label="antenna"
                 >
-                  <use href="./images/symbol-defs.svg#icon-antenna"></use>
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="features-title">Strategy</h3>
@@ -98,7 +98,7 @@
                   height="64"
                   aria-label="clock"
                 >
-                  <use href="./images/symbol-defs.svg#icon-clock"></use>
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="features-title">Punctuality</h3>
@@ -115,7 +115,7 @@
                   height="64"
                   aria-label="diagram"
                 >
-                  <use href="./images/symbol-defs.svg#icon-diagram"></use>
+                  <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="features-title">Diligence</h3>
@@ -132,7 +132,7 @@
                   height="64"
                   aria-label="astronaut"
                 >
-                  <use href="./images/symbol-defs.svg#icon-astronaut"></use>
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="features-title">Technologies</h3>
@@ -202,9 +202,7 @@
                         height="16"
                         aria-label="instagram"
                       >
-                        <use
-                          href="./images/symbol-defs.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -216,7 +214,7 @@
                         height="16"
                         aria-label="twitter"
                       >
-                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -228,9 +226,7 @@
                         height="16"
                         aria-label="facebook"
                       >
-                        <use
-                          href="./images/symbol-defs.svg#icon-facebook"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -242,9 +238,7 @@
                         height="16"
                         aria-label="linkedin"
                       >
-                        <use
-                          href="./images/symbol-defs.svg#icon-linkedin"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -271,9 +265,7 @@
                         height="16"
                         aria-label="instagram"
                       >
-                        <use
-                          href="./images/symbol-defs.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -285,7 +277,7 @@
                         height="16"
                         aria-label="twitter"
                       >
-                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -297,9 +289,7 @@
                         height="16"
                         aria-label="facebook"
                       >
-                        <use
-                          href="./images/symbol-defs.svg#icon-facebook"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -311,9 +301,7 @@
                         height="16"
                         aria-label="linkedin"
                       >
-                        <use
-                          href="./images/symbol-defs.svg#icon-linkedin"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -340,9 +328,7 @@
                         height="16"
                         aria-label="instagram"
                       >
-                        <use
-                          href="./images/symbol-defs.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -354,7 +340,7 @@
                         height="16"
                         aria-label="twitter"
                       >
-                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -366,9 +352,7 @@
                         height="16"
                         aria-label="facebook"
                       >
-                        <use
-                          href="./images/symbol-defs.svg#icon-facebook"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -380,9 +364,7 @@
                         height="16"
                         aria-label="linkedin"
                       >
-                        <use
-                          href="./images/symbol-defs.svg#icon-linkedin"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -409,9 +391,7 @@
                         height="16"
                         aria-label="instagram"
                       >
-                        <use
-                          href="./images/symbol-defs.svg#icon-instagram"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
@@ -423,7 +403,7 @@
                         height="16"
                         aria-label="twitter"
                       >
-                        <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
@@ -435,9 +415,7 @@
                         height="16"
                         aria-label="facebook"
                       >
-                        <use
-                          href="./images/symbol-defs.svg#icon-facebook"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
@@ -449,9 +427,7 @@
                         height="16"
                         aria-label="linkedin"
                       >
-                        <use
-                          href="./images/symbol-defs.svg#icon-linkedin"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -475,7 +451,7 @@
                   height="56"
                   aria-label="Customers logo"
                 >
-                  <use href="./images/symbol-defs.svg#icon-logo-1"></use>
+                  <use href="./images/icons.svg#icon-logo-1"></use>
                 </svg>
               </a>
             </li>
@@ -487,7 +463,7 @@
                   height="56"
                   aria-label="Customers logo"
                 >
-                  <use href="./images/symbol-defs.svg#icon-logo-2"></use>
+                  <use href="./images/icons.svg#icon-logo-2"></use>
                 </svg>
               </a>
             </li>
@@ -499,7 +475,7 @@
                   height="56"
                   aria-label="Customers logo"
                 >
-                  <use href="./images/symbol-defs.svg#icon-logo-3"></use>
+                  <use href="./images/icons.svg#icon-logo-3"></use>
                 </svg>
               </a>
             </li>
@@ -511,7 +487,7 @@
                   height="56"
                   aria-label="Customers logo"
                 >
-                  <use href="./images/symbol-defs.svg#icon-logo-4"></use>
+                  <use href="./images/icons.svg#icon-logo-4"></use>
                 </svg>
               </a>
             </li>
@@ -523,7 +499,7 @@
                   height="56"
                   aria-label="Customers logo"
                 >
-                  <use href="./images/symbol-defs.svg#icon-logo-5"></use>
+                  <use href="./images/icons.svg#icon-logo-5"></use>
                 </svg>
               </a>
             </li>
@@ -535,7 +511,7 @@
                   height="56"
                   aria-label="Customers logo"
                 >
-                  <use href="./images/symbol-defs.svg#icon-logo-6"></use>
+                  <use href="./images/icons.svg#icon-logo-6"></use>
                 </svg>
               </a>
             </li>
@@ -567,7 +543,7 @@
                   height="24"
                   aria-label="instagram"
                 >
-                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
@@ -579,7 +555,7 @@
                   height="24"
                   aria-label="twitter"
                 >
-                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
@@ -591,7 +567,7 @@
                   height="24"
                   aria-label="facebook"
                 >
-                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
@@ -603,7 +579,7 @@
                   height="24"
                   aria-label="linkedin"
                 >
-                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
@@ -616,7 +592,7 @@
       <div class="modal">
         <button type="button" class="close-button" data-modal-close>
           <svg class="closing-modal" width="8" height="8">
-            <use href="./images/symbol-defs.svg#icon-closeblack"></use>
+            <use href="./images/icons.svg#icon-closeblack"></use>
           </svg>
         </button>
       </div>
